markup and base styles

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,11 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+.page.theme-dark {
+
+}
+
+.page.theme-light {
+
+}
