--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,58 @@
 */
 
 .page {
+  color: var(--theme-text-color);
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-color: gray;
+}
+
+.header {
+  max-inline-size: 696px;
+  margin: auto;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  border: 2px solid red;
+  margin-top: 102px;
+  margin-bottom: 100px;
+  background-color: var(--theme-background-color);
+}
+
+.decorative-tag{
+  justify-self: center;
+  align-self: end;
+  font-family: Press Start 2P;
+  font-size: 65px;
+  font-weight: 400;
+  line-height: 65px;
+  text-transform: uppercase;
+}
+
+.main-title {
+    justify-self: center;
+}
+
+.theme-menu {
+  justify-self: center;
+}
+
+.theme-menu__list {
+  margin: 25px 0;
+}
+
+.main {
+  max-inline-size: 696px;
+  margin: auto;
+  background-color: var(--theme-background-color);
+}
+
+.card {
+  inline-size: 100%;
+}
+
+img {
+  display: block;
+  max-block-size: 100%;
+  inline-size: 100%;
+  object-fit: cover;
 }
