--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,22 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
+@font-face {
+  font-display: swap;
+  font-family: 'Inter';
+  src:
+    local('Inter-Variable'),
+    url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
+    url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+  font-weight: 400 800;
+  font-stretch: 0% 100%;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: Press-Start-2P;
+  src: 
+    local('Press-Start-2P'),
+    local('Press_Start_2P'),
+    local('press-start-2p'),
+    url('../fonts/PressStart2P-Regular.woff') format('woff');
+  font-weight: 400;
+}
