--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,14 @@
 */
 
 .page {
+  font-family: var(--main-font);
   color: var(--theme-text-color);
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  background-color: gray;
+  background-color: var(--background-gradient-cover);
+  background-image: var(--page-background-gradient);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .header {
@@ -26,16 +30,16 @@
   margin: auto;
   display: grid;
   grid-template-rows: 1fr 1fr;
-  border: 2px solid red;
   margin-top: 102px;
   margin-bottom: 100px;
   background-color: var(--theme-background-color);
+  border: 2px solid var(--border-color);
 }
 
 .decorative-tag{
   justify-self: center;
   align-self: end;
-  font-family: Press Start 2P;
+  font-family: Press-Start-2P, sans-serif;
   font-size: 65px;
   font-weight: 400;
   line-height: 65px;
@@ -43,7 +47,13 @@
 }
 
 .main-title {
-    justify-self: center;
+  justify-self: center;
+  text-transform: uppercase;
+  font-family: Press-Start-2P;
+  font-size: 23px;
+  font-weight: 400;
+  line-height: 23px;
+  margin-top: 20px;
 }
 
 .theme-menu {
@@ -54,19 +64,72 @@
   margin: 25px 0;
 }
 
+.theme-menu__button {
+  font-family: Press-Start-2P;
+  font-size: 14px;
+  font-weight: 400;
+}
+
 .main {
-  max-inline-size: 696px;
+  max-inline-size: 700px;
   margin: auto;
   background-color: var(--theme-background-color);
 }
 
 .card {
+  display: grid;
   inline-size: 100%;
+  border: 2px solid var(--border-color);
 }
 
-img {
+.card-title {  
+  font-size: 18px;
+  font-weight: 785;
+  line-height: 21.78px;
+  text-align: left;
+  font-variation-settings: 'slnt' 0;
+}
+
+.img-wrapper{
+  position: relative;
+
+}
+
+img {  
   display: block;
   max-block-size: 100%;
   inline-size: 100%;
   object-fit: cover;
+  border-top: 2px solid var(--border-color);
+  border-bottom: 2px solid var(--border-color);
+  z-index: 0;
+}
+
+.img-wrapper::after {
+  position: absolute;
+  content: "</HTML>";
+  top: var(--gap);
+  right: var(--gap);
+  z-index: 1;
+  color: var(--theme-text-color);
+  opacity: 50%;
+  font-family: Press-Start-2P, sans-serif;
+
+}
+
+.card-footer {
+  display: grid;
+  padding: var(--gap);
+}
+
+.note, .memory, .like {
+  margin-top: var(--gap);
+}
+
+.like {
+  display: block;
+  inline-size: 169px;
+  justify-self: end;
+  align-self: end;
+  text-transform: uppercase;
 }
