--- a/styles/themes.css
+++ b/styles/themes.css
@@ -10,5 +10,12 @@
 }
 
 .page.theme-light {
+  --page-background-gradient: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      #d3d3d300 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
 
 }
