--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,22 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 
 :root {
-  --theme-background-color:#000000;
+  /* backgrounds */
+  --theme-background-color:#000;  
+  --background-gradient-color:#000;
+  --background-gradient-cover:#007F0C;
+  --background-gradient-smooth-start:#007F0C;
+  --background-gradient-smooth-end:#004306;
+  --page-background-gradient: 
+  repeating-linear-gradient(to left, transparent 0 2px, 
+    var(--background-gradient-color) 2px 4px), 
+  repeating-linear-gradient(to bottom, transparent 0 2px,
+    var(--background-gradient-color) 2px 4px),
+  linear-gradient(to bottom, var(--background-gradient-smooth-start) 0.01%, var(--background-gradient-smooth-end));
+  
+  
   --theme-text-color: #00CC14;
+  --border-color:#00CC14;
+  --gap: 25px;
+  --main-font: Inter, sans-serif;
 }
