--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 }
 
 .header {
-  max-inline-size: 696px;
+  max-inline-size: 700px;
   margin: auto;
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -40,7 +40,7 @@
   justify-self: center;
   align-self: end;
   font-family: Press-Start-2P, sans-serif;
-  font-size: 65px;
+  font-size: clamp(3.063rem, 1.909rem + 4.923vi, 4.063rem);
   font-weight: 400;
   line-height: 65px;
   text-transform: uppercase;
@@ -50,9 +50,8 @@
   justify-self: center;
   text-transform: uppercase;
   font-family: Press-Start-2P;
-  font-size: 23px;
+  font-size: clamp(0.875rem, 0.226rem + 2.769vi, 1.438rem);
   font-weight: 400;
-  line-height: 23px;
   margin-top: 20px;
 }
 
@@ -88,11 +87,11 @@
   line-height: 21.78px;
   text-align: left;
   font-variation-settings: 'slnt' 0;
+  padding: 5px 0 5px 10px;
 }
 
 .img-wrapper{
   position: relative;
-
 }
 
 img {  
@@ -114,22 +113,54 @@ img {
   color: var(--theme-text-color);
   opacity: 50%;
   font-family: Press-Start-2P, sans-serif;
-
 }
 
 .card-footer {
   display: grid;
   padding: var(--gap);
-}
-
-.note, .memory, .like {
-  margin-top: var(--gap);
+  gap: var(--gap);
 }
 
 .like {
-  display: block;
-  inline-size: 169px;
+  display: flex;
+  gap: 12px;
   justify-self: end;
   align-self: end;
-  text-transform: uppercase;
+}
+
+.card__like-button {
+  padding: 9px 17px;
+  border: 2px solid var(--border-color);
+  inline-size: 118px;
+}
+
+.like-icon {
+  padding-top: 5px;
+  color: var(--theme-text-color);
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.card__icon-button {
+  border: none;
+  border: 2px solid transparent;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--theme-text-color);
+  transition: border 0.3s ease;
+}
+
+.button__text {
+  text-transform: capitalize;
+  font-family: Press-Start-2P;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 0.9;
 }
