--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,17 +5,37 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-.page.theme-dark {
-
+.html.theme-dark {
+  
 }
 
-.page.theme-light {
-  --page-background-gradient: repeating-linear-gradient(
-      to left,
-      #d3d3d3 0 2px,
-      #d3d3d300 2px 4px
-    ),
-    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
-    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+.theme-light {
+  --theme-background-color:#FFFFFF;  
+  --background-gradient-color:#FFFFFF;
+  --background-gradient-cover:#d3d3d3;
+  --background-gradient-smooth-start:#e7e7e7;
+  --background-gradient-smooth-end:#1a1a1a;
 
+  --theme-text-color: #000000;
+  --border-color:#000000;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* backgrounds */
+  --theme-background-color:##FFFFFF;  
+  --background-gradient-color:##FFFFFF;
+  --background-gradient-cover:#d3d3d3;
+  --background-gradient-smooth-start:#e7e7e7;
+  --background-gradient-smooth-end:#1a1a1a;
+
+  --theme-text-color: #000000;
+  --border-color:#000000;
+/*   --page-background-gradient: 
+  repeating-linear-gradient(to left, transparent 0 2px, 
+    var(--background-gradient-color) 2px 4px), 
+  repeating-linear-gradient(to bottom, transparent 0 2px,
+    var(--background-gradient-color) 2px 4px),
+  linear-gradient(to bottom, var(--background-gradient-smooth-start) 0.01%, var(--background-gradient-smooth-end)); */
+  }
 }
