--- a/styles/animations.css
+++ b/styles/animations.css
@@ -95,3 +95,56 @@
     scale: 1.5;
   }
 }
+
+/* button animation */
+
+.theme-menu__button:disabled::before{
+  content:"▶";
+  color: var(--theme-text-color);
+  left: -20px;
+  position: absolute;
+  animation: wiggle 0.3s ease-in infinite alternate;  
+}
+
+@keyframes wiggle {
+  from {
+    left: -16px;
+  }
+  to {
+    left: -20px;
+  }
+}
+
+/* button focus animation */
+
+.theme-menu__button:enabled::after {
+  content: "";
+  display: block;
+  background: currentColor;
+  transition: transform 0.3s ease;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 2px;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background: var(--theme-text-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
