--- a/styles/style.css
+++ b/styles/style.css
@@ -29,16 +29,21 @@
   max-inline-size: 700px;
   margin: auto;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 2fr 1fr;
   margin-top: 102px;
   margin-bottom: 100px;
   background-color: var(--theme-background-color);
   border: 2px solid var(--border-color);
 }
 
-.decorative-tag{
-  justify-self: center;
+.main-title {
   align-self: end;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.decorative-tag{
   font-family: Press-Start-2P, sans-serif;
   font-size: clamp(3.063rem, 1.909rem + 4.923vi, 4.063rem);
   font-weight: 400;
@@ -46,8 +51,8 @@
   text-transform: uppercase;
 }
 
-.main-title {
-  justify-self: center;
+.main-title h1 {
+  align-self: center;
   text-transform: uppercase;
   font-family: Press-Start-2P;
   font-size: clamp(0.875rem, 0.226rem + 2.769vi, 1.438rem);
@@ -57,22 +62,28 @@
 
 .theme-menu {
   justify-self: center;
+  display: grid;
 }
 
 .theme-menu__list {
+  justify-self: center;
   margin: 25px 0;
   display: flex;
+  gap: 7px;
   flex-direction: column;
   align-items: start;
 }
 
 .theme-menu__button {
+  margin-left: 6px;
   font-family: Press-Start-2P;
   font-size: 14px;
   font-weight: 400;
+  text-transform: uppercase;
   border: none;
   position: relative;
   transition: opacity 0.3s ease;
+  cursor: pointer;
 }
 
 .theme-menu__button:disabled, .theme-menu__button:hover {
@@ -94,6 +105,10 @@
 
 .sprint-deck {
   background-color: var(--theme-background-color);
+}
+
+.sprint-deck li {
+  margin-top: 50px;
 }
 
 .card {
@@ -125,14 +140,13 @@ img {
   z-index: 0;
 }
 
-.img-wrapper::after {
+.watermark{
   position: absolute;
-  content: "</HTML>";
   top: var(--gap);
   right: var(--gap);
   z-index: 1;
   color: var(--theme-text-color);
-  opacity: 50%;
+  opacity: 70%;
   font-family: Press-Start-2P, sans-serif;
   text-shadow: 
     -1px -1px 1px var(--watermark-shadow), 
@@ -143,11 +157,19 @@ img {
 }
 
 @supports((text-stroke: 1px var(--watermark-shadow)) or (-webkit-text-stroke: 1px var(--watermark-shadow))) {
-  .img-wrapper::after {
+  .watermark {
       -webkit-text-stroke: 1px var(--watermark-shadow);
       text-stroke: 1px var(--watermark-shadow);
       text-shadow: none;
   }
+}
+
+.note, .memory {
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 465;
+  line-height: 21px;
+  font-variation-settings: 'slnt' 0;
 }
 
 .card-footer {
@@ -158,19 +180,16 @@ img {
 
 .like {
   display: flex;
-  gap: 12px;
   justify-self: end;
   align-self: end;
 }
 
 .card__like-button {
-  padding: 9px 17px;
-  border: 2px solid var(--border-color);
-  inline-size: 118px;
+  inline-size: 135px;
+  block-size: 38px;
 }
 
 .like-icon {
-  padding-top: 5px;
   color: var(--theme-text-color);
 }
 
@@ -179,7 +198,8 @@ img {
 }
 
 .card__icon-button {
-  border: none;
+  padding: 0;
+  padding-bottom: -5px;
   border: 2px solid transparent;
 }
 
@@ -195,6 +215,7 @@ img {
 .button {
   transition: box-shadow 0.3s ease;
   position: relative;
+  border: 2px solid var(--border-color);
 }
 
 .button:focus {
@@ -224,7 +245,7 @@ img {
   align-items: center;
   justify-content: center;
   gap: 8px;
-  min-inline-size: 375px;
+  min-inline-size: 345px;
   min-block-size: 55px;  
   flex-wrap: nowrap;
   border: 2px solid var(--border-color);
@@ -233,4 +254,92 @@ img {
 .save-button-icon {
   inline-size: 21px;
   block-size: 21px;
+}
+
+#dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+  backdrop-filter: blur(7px);
+}
+
+#dialog {
+  max-inline-size: 353px;
+  border: 2px solid var(--border-color);
+  color: var(--theme-text-color);
+  padding: 25px 30px;
+  font-family: Press-Start-2P;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: var(--theme-background-color);
+}
+
+.dialog-content {
+  display: flex;
+  gap: 20px;
+}
+
+.dialog-icon {
+  block-size: 39px;
+  inline-size: 39px;
+  flex-shrink: 0;
+}
+
+.dialog-button {  
+  inline-size: 100%;
+  font-family: Press-Start-2P;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 0.9;
+  text-transform: uppercase;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  block-size: 38px;
+}
+
+
+@media (width <= 375px) {
+  .header {
+    max-block-size: 323px;
+    grid-template-rows: 200px 1fr;
+  }
+
+  .save-button {
+    flex-direction: column;
+    min-block-size: 84px;
+    min-inline-size: 306px;
+  }
+
+  .save-button-icon {
+    block-size: 28px;
+    inline-size: 28px;
+  }
+}
+
+.bright {
+  filter: brightness(200%);
+}
+
+.contrast {
+  filter: contrast(150%);
+}
+
+.blur {
+  filter: blur(5px);
+}
+
+.opacity {
+  filter: opacity(50%);
+}
+
+.gray {
+  filter: grayscale(0.9);
+}
+
+.friends {
+  filter: sepia(80%) contrast(130%);
+}
+
+.hope {
+  filter: contrast(140%) brightness(120%) sepia(50%);
 }
