--- a/styles/style.css
+++ b/styles/style.css
@@ -156,15 +156,15 @@ img {
   mix-blend-mode: hard-light;
 }
 
-@supports((text-stroke: 1px var(--watermark-shadow)) or (-webkit-text-stroke: 1px var(--watermark-shadow))) {
+@supports((stroke: 1px var(--watermark-shadow)) or (-webkit-text-stroke: 1px var(--watermark-shadow))) {
   .watermark {
       -webkit-text-stroke: 1px var(--watermark-shadow);
-      text-stroke: 1px var(--watermark-shadow);
+      stroke: 1px var(--watermark-shadow);
       text-shadow: none;
   }
 }
 
-.note, .memory {
+.plain-text{
   font-family: Inter;
   font-size: 18px;
   font-weight: 465;
@@ -199,7 +199,6 @@ img {
 
 .card__icon-button {
   padding: 0;
-  padding-bottom: -5px;
   border: 2px solid transparent;
 }
 
