--- a/styles/themes.css
+++ b/styles/themes.css
@@ -17,7 +17,7 @@
     var(--background-gradient-color) 2px 4px), 
   repeating-linear-gradient(to bottom, transparent 0 2px,
     var(--background-gradient-color) 2px 4px),
-  linear-gradient(to bottom, var(--background-gradient-smooth-start) 0.01%, var(--background-gradient-smooth-end));
+  linear-gradient(to bottom, var(--background-gradient-smooth-start) 0.01%, var(--background-gradient-smooth-end));  
   
   
   --theme-text-color: #00CC14;
@@ -41,6 +41,11 @@
   --border-color:#000000;
   --watermark-shadow: #FFFFFF;
   --button-text-color: #fff;
+
+  --page-background-gradient:
+  repeating-linear-gradient(to left, var(--background-gradient-cover) 0 2px, transparent 2px 4px), 
+  repeating-linear-gradient(to bottom, var(--background-gradient-cover) 0 2px, transparent 2px 4px), 
+  linear-gradient(to bottom, var(--background-gradient-smooth-start) 0%, var(--background-gradient-smooth-start) 0.01%, var(--background-gradient-smooth-end) 100%);
 }
 
 @media (prefers-color-scheme: light) {
@@ -56,5 +61,10 @@
   --border-color:#000000;
   --watermark-shadow: #FFFFFF;
   --button-text-color: #000;
+  
+  --page-background-gradient:
+  repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px), 
+  repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px), 
+  linear-gradient(to bottom, var(--background-gradient-smooth-start) 0%, var(--background-gradient-smooth-start) 0.01%, var(--background-gradient-smooth-end) 100%);
   }
 }
