--- a/styles/variables.css
+++ b/styles/variables.css
@@ -31,5 +31,8 @@
   --decorative-font: Press-Start-2P, sans-serif;
   --decorative-font-weight: 400;
   --main-font: "Inter", sans-serif;
+  --main-font-normal-weight: "wght" 400;
+  --main-font-bold-weight: "wght" 785;
+  --main-font-paragraph-weight: "wght" 465;
 
 }
