--- a/styles/animations.css
+++ b/styles/animations.css
@@ -74,7 +74,7 @@
 /* spark explosion*/
 
 .like-icon.is-liked .sparks {
-  animation: sparks 0.3s ease-in 0.3s alternate;
+  animation: sparks 0.3s ease-in 0.3s 1 alternate;
 }
 
 @keyframes sparks {
@@ -103,7 +103,7 @@
   color: var(--theme-text-color);
   left: -20px;
   position: absolute;
-  animation: arrow-movement 0.5s ease infinite alternate;  
+  animation: arrow-movement 0.5s ease-in-out infinite alternate;  
 }
 
 @keyframes arrow-movement {
